--- a/src/components/CardApresentacao.css
+++ b/src/components/CardApresentacao.css
@@ -1,28 +1,44 @@
 #containerCard{
     background-color: rgb(128, 128, 212);
-    border: 2px solid black;
     border-radius: 5%;
     display: flex;
     margin: 20px;
     padding: 10px;
+    height: 200px;
+    width: 600px;
+    margin-left: 400px;
 }
 
 img{
     border-radius: 100%;
-    padding: 10px;
-    margin: 10px;
     width: 200px;
     height: 200px;
 }
 
-#corLetra{
-    color: rgb(255, 255, 255);
-}
-
 #nome{
     text-align: center;
+    color: white;
+    font-size: 2em;
 }
 
 #idade{
     text-align: center;
+    font-size: 1.5em;
+    color: white;
+}
+
+/*#git{
+    width: 36px;
+    height: 36px;
+    margin: 20px 10px 0px 0px;
+}
+
+#linkedin{
+    width: 36px;
+    height: 36px;
+    margin-top: 20px ;
+}*/
+
+#social{
+    display: flex;
 }
